# NeRF-US

./: CITATION.cff  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
config/: shapenet.yaml  synthetic-knee.yaml
nerfus/: download_nerfus_dataset.py  run.py
nerfus/cubes/: binvox_rw.py  datasets3D.py  render.py  utils.py  visualize3D.py
nerfus/data_modules/: cubes3d.py  datamodule.py
nerfus/lightning/: dsds_loss.py  nerfus_trainer.py
nerfus/models/: fp16_util.py  model.py  unet.py
nerfus/nerf/: nerfbusters_utils.py  nerfus_config.py  nerfus_pipeline.py
nerfus/nerf/experiment_configs/: nerfacto_experiments.py  utils.py
nerfus/utils/: utils.py  visualizations.py
